Fixed Header and gap problem
Fixed header and gap problem prev existed. Credit has been staged.

--- a/assets/style/_global.scss
+++ b/assets/style/_global.scss
@@ -7,31 +7,31 @@ $golden-color: #f8ca25;
 $roasted-color: #f07b0e;
 //its just temporary
 .golden-color {
-	color: #f8ca25;
+    color: #f8ca25;
 }
 .roasted-color {
-	color: #f07b0e;
+    color: #f07b0e;
 }
 //*****************//
 
 // reseting stuff
 html {
-	font-size: 100%;
-	box-sizing: border-box;
+    font-size: 100%;
+    box-sizing: border-box;
 }
 
 *,
 *::before,
 *::after {
-	box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 body {
-	margin: 0;
-	padding: 0;
-	line-height: 1.3;
-	font-family: "Source Sans Pro", sans-serif;
-	background-color: $dark-blue;
+    margin: 0;
+    padding: 0;
+    line-height: 1.3;
+    font-family: "Source Sans Pro", sans-serif;
+    background-color: $dark-blue;
     width: 100%;
     height: 100vh;
     position: relative;
@@ -42,33 +42,33 @@ h2,
 h3,
 p,
 a {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 li,
 ul {
-	list-style: none;
-	padding: 0;
-	margin: 0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
 //resetting a
 a {
-	display: block;
-	text-decoration: none;
-	color: $white-color;
+    display: block;
+    text-decoration: none;
+    color: $white-color;
 }
 
 input,
 select,
 button {
-	appearance: none;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	outline: none;
-	border: none;
-	cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    outline: none;
+    border: none;
+    cursor: pointer;
 }
 
 //the modification for background img on every section
@@ -79,9 +79,21 @@ button {
     top: 100;
     z-index: -20;
     img {
-      height: 100%;
-      width: 100%;
-      opacity: 0.35;
-      object-fit: cover;
+        height: 100%;
+        width: 100%;
+        opacity: 0.35;
+        object-fit: cover;
     }
-  }
+}
+
+.credit-container{
+    max-width: 100%;
+    position: absolute;
+    top: 95%;
+    left: 90%;
+    a{
+        display: inline;
+        color: $light-blue;
+        text-decoration: underline;
+    }
+}
