--- a/assets/style/_header.scss
+++ b/assets/style/_header.scss
@@ -1,70 +1,69 @@
 // responsive header coming soon
 
 header {
-    // position: sticky;
-    top: 0;
-    // background-color: $dark-blue;
-    z-index: 10;
-	max-width: 80%;
-	margin: 0 auto;
-    padding: 1rem;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	img {
-		height: 70px;
-		width: 70px;
-	}
-	ul {
-        // padding: 0;
-		width: 50%;
-		display: flex;
-		justify-content: space-between;
-		font-size: 2rem;
-        
-		li {
-            margin: 1rem;
-			a {
-				color: $bage-color;
-			}
-			// transition: 2s linear;
-			// will add transition later. use pseudo element
-			// a:hover {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, 0);
 
-			// 	border-bottom: 2px solid $bage-color;
-			// }
-		}
-	}
+    z-index: 10;
+    width: 80%;
+    margin: 0;
+    padding: 1rem;
+    .header-container {
+        margin: auto;
+        display: flex;
+        justify-content: space-between;
+        align-self: center;
+        align-items: center;
+        max-width: 80%;
+        img {
+            height: 70px;
+            width: 70px;
+        }
+        ul {
+            width: 50%;
+            display: flex;
+            justify-content: space-between;
+            font-size: 2rem;
+
+            li {
+                margin: 1rem;
+                a {
+                    color: $bage-color;
+                }
+            }
+        }
+    }
 }
 
 @media (max-width: 1600px) {
-	header {
-		img {
-			height: 64px;
-			width: 64px;
-		}
-		ul {
-			font-size: 1.6rem;
-		}
-	}
+    header {
+        img {
+            height: 64px;
+            width: 64px;
+        }
+        ul {
+            font-size: 1.6rem;
+        }
+    }
 }
 
 @media (max-width: 1280px) {
-	header {
-		ul {
-			font-size: 1.4rem;
-		}
-	}
+    header {
+        ul {
+            font-size: 1.4rem;
+        }
+    }
 }
 //gotta have an hamburger menu later.
 @media (max-width: 800px) {
-	header {
-		img {
-			height: 48px;
-			width: 48px;
-		}
-		ul {
-			font-size: 1.2rem;
-		}
-	}
+    header {
+        img {
+            height: 48px;
+            width: 48px;
+        }
+        ul {
+            font-size: 1.2rem;
+        }
+    }
 }
