--- a/assets/style/_mixins.scss
+++ b/assets/style/_mixins.scss
@@ -41,7 +41,7 @@
 .side-text {
 	margin: 2.5rem 0 0 0;
 	width: 50%;
-	width: clamp(27rem, 50vw, 50rem);
+	width: clamp(22rem, 50vw, 50rem);
 	font-size: 1.5rem;
 	font-weight: 400;
 	color: $white-color;
